[package]
name = "serde_json5"
version = "0.2.0"
authors = ["Gary Bressler <geb@google.com>"]
description = "A Serde (de)serializer for JSON5."
license = "Apache-2.0"
repository = "https://github.com/google/serde_json5"
readme = "README.md"
keywords = ["json5", "json", "serde", "serialization"]
edition = "2021"

[lib]
name = "serde_json5"
path = "third_party/src/lib.rs"

[[test]]
name = "serde_json5_test"
path = "third_party/tests/lib.rs"

[dependencies]
pest = "2.0"
pest_derive = "2.0"
serde = "1.0"

[dev-dependencies]
matches = "0.1.8"
serde_derive = "1.0"
serde_json = "1.0"
